--- a/credintials.yml
+++ b/credintials.yml
@@ -1,8 +1,8 @@
 db:
-  host: "localhost",
-  user: "root",
-  passwd: "root",
-  database: "PayslipDB",
+  host: "localhost"
+  user: "root"
+  passwd: "root"
+  database: "PayslipDB"
   auth_plugin: "mysql_native_password"
 
 system_pass:
