--- a/credintials.yml
+++ b/credintials.yml
@@ -1,8 +1,15 @@
+# db:
+#   host: "remotemysql.com"
+#   user: "8cXi2WevvB"
+#   passwd: "3TMNZ0iDs4"
+#   database: "8cXi2WevvB"
+#   auth_plugin: "mysql_native_password"
+
 db:
-  host: "remotemysql.com"
-  user: "8cXi2WevvB"
-  passwd: "3TMNZ0iDs4"
-  database: "8cXi2WevvB"
+  host: "localhost"
+  user: "root"
+  passwd: "@&&67&&@+7"
+  database: "payment"
   auth_plugin: "mysql_native_password"
 
 system_pass:
